--- a/001 - First Pipeline/Jenkinsfile
+++ b/001 - First Pipeline/Jenkinsfile
@@ -1,13 +1,13 @@
 pipeline {
     agent { 
 		docker { 
-			image 'maven:9999999' 
+			image 'alpine:999999999' 
 		}
 	}
     stages {
         stage('build') {
             steps {
-                sh 'mvn --version'
+                sh 'cat /etc/alpine-release'
             }
         }
     }
