Update image used in 001 - First Pipeline

--- a/001 - First Pipeline/Jenkinsfile
+++ b/001 - First Pipeline/Jenkinsfile
@@ -8,6 +8,7 @@ pipeline {
         stage('build') {
             steps {
                 sh 'cat /etc/alpine-release'
+                sh 'sleep 5d'
             }
         }
     }
